--- a/kong/Dockerfile
+++ b/kong/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update
 RUN apt-get install -y netcat lua5.1 openssl libpcre3 dnsmasq wget \
      && apt-get clean
 
-RUN cd /tmp/ && wget https://github.com/Mashape/kong/releases/download/0.5.3/kong-0.5.3.trusty_all.deb \
+RUN cd /tmp/ && wget https://github.com/Mashape/kong/releases/download/$KONG_VERSION/kong-$KONG_VERSION.trusty_all.deb \
     && dpkg -i kong-$KONG_VERSION.trusty_all.deb \
     #rm kong*.deb
 
