--- a/kong/Dockerfile
+++ b/kong/Dockerfile
@@ -6,11 +6,12 @@ RUN apt-get update
 RUN apt-get install -y netcat lua5.1 openssl libpcre3 dnsmasq wget \
      && apt-get clean
 
+COPY start.sh /start.sh
+RUN chmod +x /start.sh
+
 RUN cd /tmp/ && wget https://github.com/Mashape/kong/releases/download/$KONG_VERSION/kong-$KONG_VERSION.trusty_all.deb \
     && dpkg -i kong-$KONG_VERSION.trusty_all.deb \
-    #rm kong*.deb
-
-ADD start.sh /
+    && rm kong*.deb
 
 VOLUME ["/etc/kong/"]
 ENTRYPOINT ["/start.sh"]
