--- a/kong/Dockerfile
+++ b/kong/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get install -y netcat lua5.1 openssl libpcre3 dnsmasq wget \
      && apt-get clean
 
 COPY start.sh /start.sh
+COPY kong.yml /etc/kong/kong.yml
 RUN chmod +x /start.sh
 
 RUN cd /tmp/ && wget https://github.com/Mashape/kong/releases/download/$KONG_VERSION/kong-$KONG_VERSION.trusty_all.deb \
