--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,16 @@
-cassandra:
-    image: mashape/cassandra
+kong-database:
+    image: daocloud.io/koolay/alpine-postgres
     ports:
-    - 9042:9042
+    - 5432:5432
 
 kong:
     image: daocloud.io/koolay/kong
     links:
-    - "cassandra"
+    - "pg"
     ports:
     - 8000:8000
+    - 8443:8443
     - 8001:8001
+    - 7946:7946
+    - 7946:7946/udp
 
