--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,18 @@
 kong-database:
     image: daocloud.io/koolay/alpine-postgres
+    environment:
+     - POSTGRES_PASSWORD=kong
+     - POSTGRES_USER=kong
+     - POSTGRES_DB=kong
     ports:
     - 5432:5432
 
 kong:
     image: daocloud.io/koolay/kong
     links:
-    - "pg"
+    - "kong-database"
+    volumes:
+    - ./kong/kong.yml:/etc/kong/kong.yml
     ports:
     - 8000:8000
     - 8443:8443
