use http instead of https

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -3,9 +3,7 @@ MAINTAINER koolay
 
 ENV DASHBOARD_VERSION 1.1.2
 
-RUN mkdir /data && cd /data \
-    && wget http://github.com/PGBI/kong-dashboard/archive/v{$DASHBOARD_VERSION}.tar.gz && tar -xf  v{$DASHBOARD_VERSION }.tar.gz \
-    && cd kong-dashboard-{$DASHBOARD_VERSION } && rm -rf archive/v{$DASHBOARD_VERSION }.tar.gz \
+RUN mkdir /data && cd /data
 
 WORKDIR /data
 
@@ -14,8 +12,13 @@ RUN echo '{ "allow_root": true }'>.bowerrc
 
 # node-sass doesn't support Alpine, so we need the build toolchain.
 RUN apk --update add ca-certificates git python build-base &&\
-    npm install && npm run install &&\
-    apk del ca-certificates git python build-base &&\
+    npm install && npm run install
+
+RUN wget -O dashboard.tar.gz  https://github.com/PGBI/kong-dashboard/archive/v{$DASHBOARD_VERSION}.tar.gz && tar -xf dashboard.tar.gz \
+    && cd kong-dashboard-{$DASHBOARD_VERSION} && rm -rf dashboard.tar.gz
+
+# clean
+RUN apk del ca-certificates git python build-base &&\
     rm -rf /var/cache/apk/*
 
 EXPOSE 8080
