--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -10,8 +10,7 @@ WORKDIR /data
 # node-sass doesn't support Alpine, so we need the build toolchain.
 RUN apk --update add ca-certificates git python build-base
 
-RUN wget -O dashboard.tar.gz  https://github.com/PGBI/kong-dashboard/archive/v$DASHBOARD_VERSION.tar.gz && tar -xf dashboard.tar.gz \
-    && cd kong-dashboard-$DASHBOARD_VERSION && rm -rf dashboard.tar.gz
+RUN git clone https://github.com/PGBI/kong-dashboard.git ./ && rm -rf .git/
 
 # bower requires this configuration parameter to allow bower install using root.
 RUN echo '{ "allow_root": true }'>.bowerrc
